# nibble

./: .gitignore  .gitmodules  ;  CMakeLists.txt  CMakeSettings.json  Makefile  PongBoy.make  README.md  README.pt-BR.md  README_ENGLISH.md  appveyor.yml  meson.build  premake5.lua
.github/workflows/: build_linux.yml  build_mac.yml  build_windows.yml
docs/: GeneratorTree.md  Makefile
docs/source/: API.rst  apps.rst  características.rst  cartridges.rst  conf.py  game loop.rst  index.rst  niblib.rst
docs/source/hardware/: audio card.rst  controle.rst  index.rst  mapa de memória.rst
docs/source/niblib/: audio.rst  input.rst  video.rst
docs/source/periféricos/: audio card.rst  controle.rst  index.rst  video card.rst
docs/source/tutorial1/: index.rst
include/: Icon.hpp  Specs.hpp  getopt.h
include/devices/: Audio.hpp  Controller.hpp  GPU.hpp  Keyboard.hpp  MidiController.hpp  Mouse.hpp  VideoMemory.hpp
include/devices/GPU/: directx.hpp  opengl.hpp
include/kernel/: Channel.hpp  Device.hpp  Envelope.hpp  FMSynthesizer.hpp  Kernel.hpp  Memory.hpp  MultiWave.hpp  NoiseWave.hpp  Process.hpp  RenderBuffer.hpp  SawWave.hpp  SquareWave.hpp  TriangleWave.hpp  Types.hpp  VideoEncoder.hpp  Wave.hpp  filesystem.hpp  kernel.hpp
include/kernel/drivers/: Audio.hpp  CartridgeMemory.hpp  Controller.hpp  GPU.hpp  GPUCommandMemory.hpp  Keyboard.hpp  Mouse.hpp  PaletteMemory.hpp  RAM.hpp  RandomMemory.hpp  VideoMemory.hpp
include/kernel/mmap/: Binary.hpp  Image.hpp
src/: getopt.c  getopt.h  main.cpp
src/apps/3d.nib/: main.lua
src/apps/app.nib/: main.moon
src/apps/chat.nib/: main.lua
src/apps/code.nib/: Lexer.lua  StateMachine.lua  editor.lua  main.lua
src/apps/fluid.nib/: main.lua
src/apps/game.nib/: main.lua
src/apps/hello.nib/: main.lua
src/apps/linux.nib/: main.moon
src/apps/ls.nib/: main.lua
src/apps/lua.nib/: main.lua
src/apps/mandelbrot.nib/: main.lua
src/apps/menu/: main.lua
src/apps/music.nib/: main.lua  nom.lua  synth.lua
src/apps/neact.nib/: main.lua
src/apps/net.nib/: main.lua
src/apps/shell/: main.lua
src/apps/sprite.nib/: main.lua
src/apps/synth.nib/: main.lua
src/apps/taskbar.nib/: lit.lua.md  main.lua  taskbar.lua
src/devices/: Audio.cpp  CartridgeMemory.cpp  Controller.cpp  GPU.cpp  GPUCommandMemory.cpp  Keyboard.cpp  MidiController.cpp  Mouse.cpp  RandomMemory.cpp  VideoMemory.cpp
src/kernel/: Channel.cpp  Envelope.cpp  FMSynthesizer.cpp  Kernel.cpp  Memory.cpp  MultiWave.cpp  NoiseWave.cpp  Process.cpp  RenderBuffer.cpp  SawWave.cpp  SquareWave.cpp  TriangleWave.cpp  VideoEncoder.cpp  Wave.cpp  filesystem.cpp
src/niblib/: audio.lua  gpu.lua  input.lua  main.lua  vid.lua
subprojects/giflib/: CMakeLists.txt  egif_lib.c  gif_lib.h  meson.build
subprojects/libpng/: CMakeLists.txt  meson.build
subprojects/luajit/: meson.build
subprojects/luajit/src/: lib_package.c  lj_alloc.c  lj_ccallback.c  lj_clib.c  lj_dispatch.h  lj_err.c  lj_ffdef.h  lj_libdef.h  lj_mcode.c  lj_parse.c  lj_recdef.h  lj_vm.asm  lj_vm.s  luajit
subprojects/luajit/src/host/: buildvm  buildvm_arch.h  lj_bcdef.h  minilua
subprojects/luajit/src/jit/: vmdef.lua
subprojects/mp4/: 3gp.cpp  CMakeLists.txt  atom_ac3.cpp  atom_amr.cpp  atom_avc1.cpp  atom_avcC.cpp  atom_chpl.cpp  atom_colr.cpp  atom_d263.cpp  atom_dac3.cpp  atom_damr.cpp  atom_dref.cpp  atom_elst.cpp  atom_enca.cpp  atom_encv.cpp  atom_free.cpp  atom_ftab.cpp  atom_ftyp.cpp  atom_gmin.cpp  atom_hdlr.cpp  atom_hinf.cpp  atom_hnti.cpp  atom_href.cpp  atom_mdat.cpp  atom_mdhd.cpp  atom_meta.cpp  atom_mp4s.cpp  atom_mp4v.cpp  atom_mvhd.cpp  atom_nmhd.cpp  atom_ohdr.cpp  atom_pasp.cpp  atom_root.cpp  atom_rtp.cpp  atom_s263.cpp  atom_sdp.cpp  atom_sdtp.cpp  atom_smi.cpp  atom_sound.cpp  atom_standard.cpp  (+39 more)
subprojects/rtmidi/: CMakeLists.txt  meson.build
subprojects/sdl2/: SDL_config.h.meson  meson.build
subprojects/sdl2/src/: meson.build
subprojects/sdl2/src/audio/: meson.build
subprojects/sdl2/src/audio/android/: meson.build
subprojects/sdl2/src/audio/arts/: meson.build
subprojects/sdl2/src/audio/bsd/: meson.build
subprojects/sdl2/src/audio/coreaudio/: meson.build
subprojects/sdl2/src/audio/dsp/: meson.build
subprojects/sdl2/src/audio/esd/: meson.build
subprojects/sdl2/src/audio/fusionsound/: meson.build
subprojects/sdl2/src/audio/nas/: meson.build
subprojects/sdl2/src/audio/paudio/: meson.build
subprojects/sdl2/src/audio/psp/: meson.build
subprojects/sdl2/src/audio/pulseaudio/: meson.build
subprojects/sdl2/src/audio/qsa/: meson.build
subprojects/sdl2/src/audio/sndio/: meson.build
subprojects/sdl2/src/audio/sun/: meson.build
subprojects/sdl2/src/audio/xaudio2/: meson.build
subprojects/sdl2/src/core/: meson.build
subprojects/sdl2/src/core/linux/: meson.build
subprojects/sdl2/src/core/windows/: meson.build
subprojects/sdl2/src/filesystem/cocoa/: meson.build
subprojects/sdl2/src/joystick/: meson.build
subprojects/sdl2/src/joystick/windows/: meson.build
subprojects/sdl2/src/libm/: meson.build
subprojects/sdl2/src/render/: SDL_render.c  meson.build
subprojects/sdl2/src/render/direct3d/: meson.build
subprojects/sdl2/src/stdlib/: meson.build
subprojects/sdl2/src/test/: meson.build
subprojects/sdl2/src/video/: meson.build
subprojects/sdl2/src/video/android/: meson.build
subprojects/sdl2/src/video/directfb/: meson.build
subprojects/sdl2/src/video/mir/: meson.build
subprojects/sdl2/src/video/pandora/: meson.build
subprojects/sdl2/src/video/psp/: meson.build
subprojects/sdl2/src/video/raspberry/: meson.build
subprojects/sdl2/src/video/uikit/: meson.build
subprojects/sdl2/src/video/wayland/: meson.build
subprojects/sdl2/src/video/windows/: meson.build
subprojects/sdl2/src/video/winrt/: meson.build
subprojects/sdl2/test/: meson.build
subprojects/x264/: .gitignore  CMakeLists.txt  config.h  example  example.c  x264_config.h
subprojects/x264/common/: threadpool.c
subprojects/x264/encoder/: api.c
subprojects/x264/filters/video/: resize.c
subprojects/zlib/: CMakeLists.txt  meson.build  zlib.h
(+214 files in other folders)
