all_sources += files(
  'SDL_error.c',
  'SDL_assert.c',
  'SDL.c',
  'SDL_log.c',
  'SDL_hints.c',
)

subdir('atomic')
subdir('audio')
subdir('core')
subdir('cpuinfo')
subdir('dynapi')
subdir('events')
subdir('file')
subdir('filesystem')
subdir('haptic')
subdir('joystick')
subdir('libm')
subdir('loadso')
subdir('main')
subdir('power')
subdir('render')
subdir('stdlib')
subdir('test')
subdir('thread')
subdir('timer')
subdir('video')
