all_sources += files(
  'SDL_windowsmouse.c',
  'SDL_windowsopengles.c',
  'SDL_windowsevents.c',
  'SDL_windowswindow.c',
  'SDL_windowsvideo.c',
  'SDL_windowsmessagebox.c',
  'SDL_windowskeyboard.c',
  'SDL_windowsshape.c',
  'SDL_windowsopengl.c',
  'SDL_windowsclipboard.c',
  'SDL_windowsmodes.c',
  'SDL_windowsframebuffer.c',
)
